# YOLOv8-ORB-SLAM3

./: CMakeLists.txt  CameraTrajectory_gt.txt  CameraTrajectory_yolo.txt  KeyFrameTrajectory_gt.txt  KeyFrameTrajectory_yolo.txt  README.md
Examples/RGB-D/: rgbd_tum.cc
Examples_old/RGB-D/: rgbd_tum.cc
include/: Frame.h  FrameDrawer.h  System.h  Tracking.h
monu_test/: myslam.cpp
src/: Frame.cc  FrameDrawer.cc  System.cc  Tracking.cc
stereo_test/: slam_stereo.cpp  slam_stereo.yaml
yolov8/: CMakeLists.txt  main.cpp  yolov8_seg.cpp  yolov8_seg.h  yolov8_utils.cpp  yolov8_utils.h
